--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,27 +1,19 @@
 {
     "env": {
-      "browser": true,
-      "es2021": true
+        "browser": true,
+        "es2021": true
     },
     "extends": [
-      "eslint:recommended",
-      "plugin:@typescript-eslint/recommended",
-      "prettier"
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
-      "ecmaVersion": "latest",
-      "sourceType": "module"
+        "ecmaVersion": "latest",
+        "sourceType": "module"
     },
-    "plugins": ["@typescript-eslint"],
-    "rules": {
-      "no-unused-vars": "error",
-      "no-unused-expressions": "error",
-      "prefer-const": "error",
-      "no-console": "warn",
-      "no-undef": "error"
-    },
-    "globals": {
-      "process": "readonly"
-    }
-  }
+    "plugins": [
+        "@typescript-eslint"
+    ],
+    "rules": {}
+}
