order page added and stripe configure done

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.8.2",
         "passport": "^0.7.0",
-        "passport-google-oauth20": "^2.0.0"
+        "passport-google-oauth20": "^2.0.0",
+        "stripe": "^17.4.0"
     },
     "devDependencies": {
         "@types/cookie-parser": "^1.4.7",
