payment setup started

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "test": "jest"
     },
     "dependencies": {
+        "@types/stripe": "^8.0.416",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
